--- a/Bplac/accidental.html
+++ b/Bplac/accidental.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css"> -->
-    <link rel="stylesheet" href="../../public/webviews/aia_bplac_d2/assets/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Yellow Messenger</title>
 
     <!-- custom datePicker for safari -->
