path css changed

--- a/Bplac/death.html
+++ b/Bplac/death.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
 		integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css"> -->
-	<link rel="stylesheet" href="../../public/webviews/aia_bplac_d2/assets/css/styles.css">
+	<link rel="stylesheet" href="./assets/css/styles.css">
 	<title>Yellow Messenger</title>
 	<!-- custom datePicker for safari -->
 	<script type="text/javascript">
@@ -50,7 +50,7 @@
 							<div class="col-2" style="margin-right:3rem;">
 
 
-								<img class="icon" src="../../public/webviews/aia_bplac_d2/assets/images/death.png" />
+								<img class="icon" src="./assets/images/death.png" />
 
 
 							</div>
@@ -1111,7 +1111,7 @@
 																	</div>
 																</div>
 																<div id="w8-form" class="w8-form-hidden form-message">
-																	<p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="../../public/webviews/aia_bplac_d2/assets/forms/BPI AIA-IRS-W8-BEN-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
+																	<p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="./assets/forms/BPI AIA-IRS-W8-BEN-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
 																</div>
 															</div>
 															<!-- end of addition  -->
@@ -1454,7 +1454,7 @@
 																</div>
 																<div id="err_field_citizenship" class="error"></div>
 																<div id="w9-form" class="w9-form-hidden form-message">
-																	<p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="../../public/webviews/aia_bplac_d2/assets/forms/BPI AIA-IRS-W9-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
+																	<p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="./assets/forms/BPI AIA-IRS-W9-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
 																</div>
 															</div>
 															<!-- end of addition -->
@@ -4336,14 +4336,14 @@
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;"
 								onclick="bankTranfer()">
 								<div class="column box-shadow" style="text-align: center;">
-									<img class="lib-img" src="../../public/webviews/aia_bplac_d2/assets/images/bank_transfer.png" style="width: 85%;">
+									<img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">We will
 										transfer the amount directly to the Bank Account of your choice.</div>
 								</div>
 							</div>
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;" onclick="pickUp()">
 								<div class="column box-shadow" style="text-align: center;">
-									<img class="lib-img" src="../../public/webviews/aia_bplac_d2/assets/images/pickup.png" style="width: 100%;">
+									<img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">Claim
 										your benefit at any BPI or BPI Family Savings Bank near you even if you are not
 										a BPI account holder.</div>
@@ -5571,7 +5571,7 @@
 															</div>
 														</div>
 														<div id="beneficiary-w8-form" class="beneficiary-w8-form-hidden beneficiary-form-message">
-															<p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="../../public/webviews/aia_bplac_d2/assets/forms/AIA-IRS-W8-BEN-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
+															<p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="./assets/forms/AIA-IRS-W8-BEN-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
 														</div>
 													</div>
 													<!-- end of addition -->
@@ -5915,7 +5915,7 @@
 														</div>
 														<div id="err_field_beneficiary_citizenship" class="error"></div>
 														<div id="beneficiary-w9-form" class="beneficiary-w9-form-hidden beneficiary-form-message">
-															<p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="../../public/webviews/aia_bplac_d2/assets/forms/AIA-IRS-W9-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
+															<p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="./assets/forms/AIA-IRS-W9-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
 														</div>
 													</div>
 													<!-- end of addition -->
@@ -8474,7 +8474,7 @@
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;"
 								onclick="addBeneficiarybankTranfer()">
 								<div class="column box-shadow" style="text-align: center;">
-									<img class="lib-img" src="../../public/webviews/aia_bplac_d2/assets/images/bank_transfer.png" style="width: 85%;">
+									<img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">We will
 										transfer the amount directly to the Bank Account of your choice.</div>
 								</div>
@@ -8482,7 +8482,7 @@
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;"
 								onclick="addBeneficiaryPickup()">
 								<div class="column box-shadow" style="text-align: center;">
-									<img class="lib-img" src="../../public/webviews/aia_bplac_d2/assets/images/pickup.png" style="width: 100%;">
+									<img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">Claim
 										your benefit at any BPI or BPI Family Savings Bank near you even if you are not
 										a BPI account holder.</div>
@@ -8841,7 +8841,7 @@
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/js/bs-stepper.min.js"></script> -->
-	<script src="../../public/webviews/aia_bplac_d2/assets/js/death.js"></script>
+	<script src="./assets/js/death.js"></script>
 	<script>
 		$(".custom-file-input").on("change", function () {
 			var fileName = $(this).val().split("\\").pop();
