--- a/Bplac/accidental.html
+++ b/Bplac/accidental.html
@@ -47,7 +47,7 @@
                         <div style="display: flex;
                         height: 100%;">
                             <div class="col-2" style="margin-right:1rem;">
-                                <img class="icon1" src="../../public/webviews/aia_bplac_d2/assets/images/accidental.png" />
+                                <img class="icon1" src="./assets/images/accidental.png" />
                             </div>
                             <div style="margin: 0 1rem; display: grid; max-height: 1%;">
                                 <h1 id="iconNearText" class="display-4 main__header" style="display: inline-block;
@@ -1366,7 +1366,7 @@
                                                         </div>
                                                     </div>
                                                     <div id="w8-form" class="w8-form-hidden form-message">
-                                                        <p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="../../public/webviews/aia_bplac_d2/assets/forms/BPI AIA-IRS-W8-BEN-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
+                                                        <p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="./assets/forms/BPI AIA-IRS-W8-BEN-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12 form__tags">
@@ -1669,7 +1669,7 @@
                                                     </div>
                                                     <div id="err_field_citizenship" class="error"></div>
                                                     <div id="w9-form" class="w9-form-hidden form-message">
-                                                        <p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="../../public/webviews/aia_bplac_d2/assets/forms/BPI AIA-IRS-W9-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
+                                                        <p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="./assets/forms/BPI AIA-IRS-W9-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
                                                     </div>
                                                 </div>
                                         </div>
@@ -2186,7 +2186,7 @@
                             <div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;"
                                 onclick="bankTranfer()">
                                 <div class="column box-shadow" style="text-align: center;">
-                                    <img class="lib-img" src="../../public/webviews/aia_bplac_d2/assets/images/bank_transfer.png" style="width: 85%;">
+                                    <img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
                                     <div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">
                                         We will transfer the amount directly to the Bank Account of your choice.
                                     </div>
@@ -2194,7 +2194,7 @@
                             </div>
                             <div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;" onclick="pickUp()">
                                 <div class="column box-shadow" style="text-align: center;">
-                                    <img class="lib-img" src="../../public/webviews/aia_bplac_d2/assets/images/pickup.png" style="width: 100%;">
+                                    <img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
                                     <div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">
                                         Claim your benefit at any BPI or BPI Family Savings Bank near you even if you
                                         are
@@ -2964,7 +2964,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/js/bs-stepper.min.js"></script> -->
-    <script src="../../public/webviews/aia_bplac_d2/assets/js/accidental.js"></script>
+    <script src="./assets/js/accidental.js"></script>
     <script>
         $(".custom-file-input").on("change", function () {
             var fileName = $(this).val().split("\\").pop();
