--- a/PAL/illness.html
+++ b/PAL/illness.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css"> -->
-    <link rel="stylesheet" href="../../public/webviews/aia_pal_d2/assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Yellow Messenger</title>
 
     <!-- custom datePicker for safari -->
@@ -1361,7 +1361,7 @@
                                                         </div>
                                                     </div>
                                                     <div id="w8-form" class="w8-form-hidden form-message">
-                                                        <p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="../../public/webviews/aia_pal_d2/assets/forms/AIA-IRS-W8-BEN-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
+                                                        <p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="./assets/forms/AIA-IRS-W8-BEN-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12 form__tags">
@@ -1664,7 +1664,7 @@
                                                     </div>
                                                     <div id="err_field_citizenship" class="error"></div>
                                                     <div id="w9-form" class="w9-form-hidden form-message">
-                                                        <p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="../../public/webviews/aia_pal_d2/assets/forms/AIA-IRS-W9-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
+                                                        <p>In compliance with the Foreign Account Tax Compliance Act (FATCA), please fill in and submit the <a href="./assets/forms/AIA-IRS-W9-FORM.pdf" download="">Certificate of Foreign Status.</a></p>
                                                     </div>
                                                 </div>
                                         </div>
