--- a/PAL/accidental.html
+++ b/PAL/accidental.html
@@ -62,7 +62,7 @@
                         <div style="display: flex;
                         height: 100%;">
                             <div class="col-2" style="margin-right:1rem;">
-                                <img class="icon1" src="../../public/webviews/aia_pal_d2/assets/images/accidental.png" />
+                                <img class="icon1" src="./assets/images/accidental.png" />
                             </div>
                             <div style="margin: 0 1rem; display: grid; max-height: 1%;">
                                 <h1 id="iconNearText" class="display-4 main__header" style="display: inline-block;
@@ -2237,7 +2237,7 @@
                             <div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;"
                                 onclick="bankTranfer()">
                                 <div class="column box-shadow" style="text-align: center;">
-                                    <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/bank_transfer.png" style="width: 85%;">
+                                    <img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
                                     <div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">
                                         We will transfer the amount directly to the Bank Account of your choice.
                                     </div>
@@ -2245,7 +2245,7 @@
                             </div>
                             <div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;" onclick="pickUp()">
                                 <div class="column box-shadow" style="text-align: center;">
-                                    <img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/pickup.png" style="width: 100%;">
+                                    <img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
                                     <div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">
                                         Claim your benefit at any BPI or BPI Family Savings Bank near you even if you
                                         are not a BPI account holder.
