--- a/PAL/death.html
+++ b/PAL/death.html
@@ -50,7 +50,7 @@
 							<div class="col-2" style="margin-right:3rem;">
 
 
-								<img class="icon" src="../../public/webviews/aia_pal_d2/assets/images/death.png" />
+								<img class="icon" src="./assets/images/death.png" />
 
 
 							</div>
@@ -4345,7 +4345,7 @@
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;"
 								onclick="bankTranfer()">
 								<div class="column box-shadow" style="text-align: center;">
-									<img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/bank_transfer.png" style="width: 85%;">
+									<img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">We will
 										transfer the amount directly to the Bank Account of your choice.</div>
 								</div>
@@ -8520,7 +8520,7 @@
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;"
 								onclick="addBeneficiarybankTranfer()">
 								<div class="column box-shadow" style="text-align: center;">
-									<img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/bank_transfer.png" style="width: 85%;">
+									<img class="lib-img" src="./assets/images/bank_transfer.png" style="width: 85%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">We will
 										transfer the amount directly to the Bank Account of your choice.</div>
 								</div>
@@ -8528,7 +8528,7 @@
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;"
 								onclick="addBeneficiaryPickup()">
 								<div class="column box-shadow" style="text-align: center;">
-									<img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/pickup.png" style="width: 100%;">
+									<img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">Claim
 										your benefit at any BPI or BPI Family Savings Bank near you even if you are not
 										a BPI account holder.</div>
