--- a/PAL/death.html
+++ b/PAL/death.html
@@ -8951,7 +8951,7 @@
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/js/bs-stepper.min.js"></script> -->
-	<script src="../../public/webviews/aia_pal_d2/assets/js/death.js"></script>
+	<script src="./assets/js/death.js"></script>
 	<script>
 		$(".custom-file-input").on("change", function () {
 			var fileName = $(this).val().split("\\").pop();
