--- a/PAL/main.html
+++ b/PAL/main.html
@@ -803,8 +803,8 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script src="../../public/webviews/aia_pal_d2/assets/js/messages.js"></script>
-    <script src="../../public/webviews/aia_pal_d2/assets/js/main.js"></script>
+    <script src="./assets/js/messages.js"></script>
+    <script src="./assets/js/main.js"></script>
 
     <!-- To make recaptcha responsive -->
     <!-- <script>
