--- a/PAL/main.html
+++ b/PAL/main.html
@@ -18,7 +18,7 @@
     <section class="jumbotron jumbotron-fluid" style="padding: 1rem 0 0 0;" id="img_claim">
         <div class="container">
             <div class="row justifyCenter">
-                <img src="../../public/webviews/aia_pal_d2/assets/images/claims.png" alt="claims">
+                <img src="./assets/images/claims.png" alt="claims">
             </div>
         </div>
     </section>
