--- a/PAL/death.html
+++ b/PAL/death.html
@@ -4352,7 +4352,7 @@
 							</div>
 							<div class="col-12 col-md-3" style="cursor: pointer; margin: 0 3rem;" onclick="pickUp()">
 								<div class="column box-shadow" style="text-align: center;">
-									<img class="lib-img" src="../../public/webviews/aia_pal_d2/assets/images/pickup.png" style="width: 100%;">
+									<img class="lib-img" src="./assets/images/pickup.png" style="width: 100%;">
 									<div class="lib-row lib-desc" style="text-align: center; margin-top: 1rem;">Claim
 										your benefit at any BPI or BPI Family Savings Bank near you even if you are not
 										a BPI account holder.</div>
